#13007 Fix misaligned dropdown menus in default theme

--- a/plugins/themes/default/styles/head.less
+++ b/plugins/themes/default/styles/head.less
@@ -347,20 +347,16 @@
 			}
 
 			&:first-child {
-				a {
+				> a {
 					margin-left: -0.5em;
 				}
 			}
 
 			&:last-child {
-				a {
+				> a {
 					margin-right: -0.5em;
 				}
 			}
-		}
-
-		> li:hover ul {
-			left: 1rem;
 		}
 
 		ul a {
